public_website/static/css/style.css
/* ... */
.auth-container .request-access-container .select-access .access-item .selected-check {
    position: absolute;
    left: 1rem;
    top: 1rem;
    color: #87B24D;
    font-size: 1.5rem;
    display: none;
}

.auth-container .request-access-container .select-access .access-item .selected-check.show {
    display: block;
}

.auth-container .request-access-container .select-access .access-item h2 {
    font-size: 1.1rem;
    font-weight: bold;
}

.auth-container .request-access-container .select-access .access-item img {
    margin-bottom: 1rem;
}

.auth-container .request-access-container .select-access .access-item p {
    color: #8a8a8a;
    font-size: 0.9rem;
}

.auth-container .request-access-container form p.permission-writeup-intro {
    color: #8a8a8a;
}

.auth-container .request-access-container form p.submit-button-wrapper {
    text-align: center;
}

.auth-container .request-access-container form .permission-writeup {
    margin-bottom: 0.5rem;
}

.auth-container .request-access-container form .max-word-limit {
    text-align: right;
    font-size: 0.8rem;
    color: #acacac;
}

.auth-interstitial-body {
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color:#f2f2f2;
}

.auth-interstitial-body.centered {
    text-align: center;
}

.auth-interstitial-body .auth-interstitial-content {
    width: 50%;
    background-color:#fff;
    border-radius: 5px;
    padding: 2rem;
}

@media (max-width: 768px) {
    .auth-interstitial-body .auth-interstitial-content {
        width: 95%;
        padding: 0.5rem;
    }
}

.auth-interstitial-body .auth-interstitial-content h1 {
    font-size: 1.7rem;
    margin-bottom: 2rem;
}

.auth-interstitial-body .auth-interstitial-content .message-section {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

@media (max-width: 768px) {
    .auth-interstitial-body .auth-interstitial-content .message-section {
        flex-direction: column;
    }
}

.auth-interstitial-body .auth-interstitial-content .message-section img {
    width: 64px;
    height: 64px;
}

@media (max-width: 768px) {
    .auth-interstitial-body .auth-interstitial-content .message-section img {
        margin-bottom: 1rem;
    }
}

.auth-interstitial-body .auth-interstitial-content .message-section p {
    flex-basis: 85%;
    margin-bottom: 0;
}

.auth-interstitial-body .auth-interstitial-content .message-section i {
    font-size: 3rem;
}

.auth-interstitial-body .auth-interstitial-content .message-section i.fa-times-circle {
    color:#d00000;
}

.auth-interstitial-body .auth-interstitial-content form.resend-mail {
    color: #a8a8a8;
    text-align: center;
    margin-top: 1rem;
}

.auth-interstitial-body .auth-interstitial-content form.resend-mail {
    color: #a8a8a8;
    text-align: center;
    margin-top: 1rem;
}

.auth-interstitial-body .auth-interstitial-content form.change-password-form {
    width: 60%;
    margin: auto;
}

.auth-interstitial-body .auth-interstitial-content form.change-password-form .form-fields input[name="confirm_new_password"]{
    margin-bottom: 0;
}

.auth-interstitial-body .auth-interstitial-content form.change-password-form button[type="submit"] {
    margin-top: 1rem;
}

.auth-interstitial-body .auth-interstitial-content form.resend-mail button {
    margin-left: 0.5rem;
}

.auth-interstitial-body .auth-interstitial-content form.reset-password-form {
    margin-top: 1rem;
    display: flex;
    justify-content: flex-end;
    align-items: start;
}

@media (max-width: 768px) {
    .auth-interstitial-body .auth-interstitial-content form.reset-password-form {
        flex-direction: column;
        align-items: center;
    }
}

.auth-interstitial-body .auth-interstitial-content form.reset-password-form .form-fields {
    flex-basis: 65%;
    margin-right: 1rem;
}

@media (max-width: 768px) {
    .auth-interstitial-body .auth-interstitial-content form.reset-password-form .form-fields {
        margin-bottom: 0.5rem;
        margin-right: 0;
        width: 100%;
    }
}

.auth-interstitial-body .auth-interstitial-content input.registered-email {
    margin-bottom: 0.3rem;
}

@media (max-width: 768px) {
    .map-col{
        width: 100%;
        padding: 0.8rem 0.5rem;
    }
}

@media (max-width: 768px) {
    .contact-container .contact-form-container {
        margin-top: 2rem;
    }
}

/* ======= TEMPORARY BOOTSTRAP STUFF ======= */

/* these can be removed once we've upgraded *
 * to a later version of bootstrap           */

.mb-n2 {
    margin-bottom: -2rem !important;
}

